@startuml
'https://plantuml.com/sequence-diagram

class MainController
class MainView
class Main


MainView-->MainController
Main-->MainView
MainController-->Main
MainController-->MainView


class MainView{
-main page
-controller: MainController
+ MainView(): void
+ createView(): void
}

class MainController{
- view: MainView
+ MainController(view: MainView): void
+ initView(): void
}

class Main{
+ main(args: String[]): void
- This class serves as the entry point for the application.
- It initializes the background music player using the Singleton pattern.
- It creates and displays the main view using the MVC pattern.
}
@enduml